Bug 1358926 - Check and dequeue delayed events in the queue before firing events. r=smaug a=gchang

When firing an event, check if there is any event in the delayed events queue,
if yes, fire them first to ensure the events are fired in the right order.

MozReview-Commit-ID: DY842oiHcVJ