dom/base/nsFocusManager.h
@@ -280,7 +280,8 @@ protected:
              nsIContent* aContentLostFocus = nullptr);
 
   /**
-   * Fires a focus or blur event at aTarget.
+   * Send a focus or blur event at aTarget. It may be added to the delayed
+   * event queue if the document is suppressing events.
    *
    * aEventMessage should be either eFocus or eBlur.
    * For blur events, aFocusMethod should normally be non-zero.
@@ -297,7 +298,22 @@ protected:
                             mozilla::dom::EventTarget* aRelatedTarget = nullptr);
 
   /**
-   *  Send a focusin or focusout event
+   * Fire a focus or blur event at aTarget.
+   *
+   * aEventMessage should be either eFocus or eBlur.
+   * For blur events, aFocusMethod should normally be non-zero.
+   *
+   * aWindowRaised should only be true if called from WindowRaised.
+   */
+  void FireFocusOrBlurEvent(mozilla::EventMessage aEventMessage,
+                            nsIPresShell* aPresShell,
+                            nsISupports* aTarget,
+                            bool aWindowRaised,
+                            bool aIsRefocus = false,
+                            mozilla::dom::EventTarget* aRelatedTarget = nullptr);
+
+  /**
+   *  Fire a focusin or focusout event
    *
    *  aEventMessage should be either eFocusIn or eFocusOut.
    *
@@ -313,7 +329,7 @@ protected:
    *  aRelatedTarget is the content related to the event (the object
    *  losing focus for focusin, the object getting focus for focusout).
    */
-  void SendFocusInOrOutEvent(mozilla::EventMessage aEventMessage,
+  void FireFocusInOrOutEvent(mozilla::EventMessage aEventMessage,
                              nsIPresShell* aPresShell,
                              nsISupports* aTarget,
                              nsPIDOMWindowOuter* aCurrentFocusedWindow,
